# Mail-Remote-Control-CPP

./: .gitignore  README.md
client/: AboutUs_ui.cpp  CMakeLists.txt  Capture_photo.cpp  CustomMode.cpp  CustomMode_ui.cpp  Download_file.cpp  MailRemote.cpp  MailRemote_ui.cpp  MainWindow_ui.cpp  Record_video.cpp  gmail_login_ui.cpp  gmailapi.cpp  mail_reader.cpp  main.cpp  utils.cpp
lib/: AboutUs_ui.h  Capture_photo.h  CustomMode.h  CustomMode_ui.h  Download_file.h  MailRemote.h  MailRemote_ui.h  Mail_reader.h  MainWindow_ui.h  Record_video.h  gmail_login_ui.h  gmailapi.h  gui.h  service.h  socker_client.h  utils.h
server/: CMakeLists.txt
server/service/: capture_photo.cpp  download_file.cpp  key_logger.cpp  list_apps.cpp  list_process.cpp  record_video.cpp  restart.cpp  server.cpp  shutdown.cpp  start_app.cpp  start_process.cpp  stop_app.cpp  stop_process.cpp
